# pyrat

./: .gitignore  pyproject.toml
src/pyrat/: __init__.py
tests/: test_bary.py  test_real_interval.py  test_thiele.py
